# datago

./: CMakeLists.txt  README.md
algorilthm/sort/bubble/c/: bubble_sort.c
algorilthm/sort/bubble/cplus/: Bubble_sort.cpp
algorilthm/sort/bucket_Sort/c/: bucket.c
algorilthm/sort/heap/: heap.md
algorilthm/sort/heap/c/: heap_sort.c
list/c/: Qmalloc.c
